[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/Main/Laser.gd" type="Script" id=1]
[ext_resource path="res://Graphics/VFX/LloydLaser.png" type="Texture" id=2]
[ext_resource path="res://Audio/Sound effects/Lloyd Laser.mp3" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 39 ) ],
"loop": true,
"name": "Shooting",
"speed": 12.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "ShootingDiag",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 2 )

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=22]
resource_name = "shoot down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Shooting" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=23]
resource_name = "shoot down left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 135.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ShootingDiag" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "shoot down right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ShootingDiag" ]
}

[sub_resource type="Animation" id=25]
resource_name = "shoot left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Shooting" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "shoot right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Shooting" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=27]
resource_name = "shoot up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Shooting" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=28]
resource_name = "shoot up left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 225.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ShootingDiag" ]
}

[sub_resource type="Animation" id=29]
resource_name = "shoot up right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 315.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ShootingDiag" ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "shoot down"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "shoot up"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "shoot right"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "shoot left"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "shoot down left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "shoot down right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "shoot up right"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "shoot up left"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 15 )
blend_point_4/pos = Vector2( -0.8, 0.8 )
blend_point_5/node = SubResource( 16 )
blend_point_5/pos = Vector2( 0.8, 0.8 )
blend_point_6/node = SubResource( 17 )
blend_point_6/pos = Vector2( 0.8, -0.8 )
blend_point_7/node = SubResource( 18 )
blend_point_7/pos = Vector2( -0.8, -0.8 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=20]
states/shoot/node = SubResource( 19 )
states/shoot/position = Vector2( 436.333, 73.6667 )
start_node = "shoot"

[sub_resource type="AnimationNodeStateMachinePlayback" id=30]

[node name="LaserHead" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4, 0 )
frames = SubResource( 34 )
animation = "Shooting"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 21 )
"anims/shoot down" = SubResource( 22 )
"anims/shoot down left" = SubResource( 23 )
"anims/shoot down right" = SubResource( 24 )
"anims/shoot left" = SubResource( 25 )
"anims/shoot right" = SubResource( 26 )
"anims/shoot up" = SubResource( 27 )
"anims/shoot up left" = SubResource( 28 )
"anims/shoot up right" = SubResource( 29 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 30 )
parameters/shoot/blend_position = Vector2( -0.473971, 0.210983 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
